<resources>
    <string name="app_name">CReceiptures</string>
    <string name="title_activity_account">AccountActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="create_account">Create Account</string>
    <string name="sign_in">Sign In</string>
    <string name="account">Account</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="no_connection">No Connection</string>

    <!--leaderboard-->
    <string name="rank">Rank</string>
    <string name="pet_name">Name</string>
    <string name="cReceipture">cReceipture</string>
    <string name="user">User</string>
    <string name="owner">Owner</string>
    <string name="petCoin">Total petCoin</string>
    <string name="num_pets"># pets</string>

    <!--minigame-->
    <string name="timer_default">0:15</string>
    <string name="instructions">Tap until time runs out!</string>
    <string name="lets_play">Let\'s play!</string>
    <string name="instructions_expanded">Play with your cReceipture! Tap on your pet until the 15 seconds runs out to
        upgrade it. The more you tap, the more petCoin you gain.
    </string>
    <string name="start">Start</string>
    <string name="nice_work">Nice work!</string>
    <string name="minigame_complete_info">Your pet gained XX petCoin!</string>
    <string name="play_again">Play again</string>
    <string name="back">Back</string>

    <!--credits-->
    <string name="credits_title">Credits</string>
    <string name="credits">
        cReceiptures was created by Ellen Dai and Isaac Na. \n\n

        Special thanks to: \n
        * Taggun.io for the OCR API \n
        * Square, Inc. for Picasso image loading \n
        * Github user daimajia for AndroidViewAnimations
    </string>

    <!--CREATURE URIS FOR TESTING-->
    <string name="test_ellen">https://robohash.org/ellen?set=set4</string>
    <string name="test_isaac">https://robohash.org/isaac?set=set4</string>
    <string name="test_puneet">https://robohash.org/puneet?set=set4</string>
    <string name="test_digshake">https://robohash.org/digshake?set=set4</string>
    <string name="test_taylor">https://robohash.org/taylor?set=set4</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_minigame">MinigameActivity</string>
    <string name="title_activity_add_pet">Add Pet</string>
</resources>
