<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingVertical="@dimen/list_margin">

    <TextView
            android:text="@string/rank"
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content" android:id="@+id/rank" android:layout_weight="1"/>
    <TextView
            android:text="@string/user"
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content" android:id="@+id/user" android:layout_weight="1"/>
    <TextView
            android:text="@string/num_pets"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/num_pets" android:layout_weight="1"/>
</LinearLayout>
