<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginHorizontal="@dimen/dialog_horizontal_margin"
              android:padding="@dimen/dialog_padding"
              android:gravity="center" android:orientation="vertical">
    <TextView
            android:text="@string/nice_work"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content" android:id="@+id/nice_work"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>
    <TextView
            android:text="@string/minigame_complete_info"
            android:gravity="center"
            android:paddingVertical="@dimen/dialog_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/end_info"/>
    <LinearLayout
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/dialog_padding"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <Button
                android:text="@string/play_again"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/play_again_button" android:layout_weight="1"/>
        <Button
                android:text="@string/back"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/back_button" android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>