<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/credits_title"
            android:padding="16dp"
            android:textSize="24sp"
            android:background="@color/light_gray"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toTopOf="@+id/body"/>

    <TextView
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/title"
            android:padding="30dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/credits"
    />

    <Button
            android:id="@+id/close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back"
            app:layout_constraintTop_toBottomOf="@id/body"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="12dp"
            tools:layout_editor_absoluteX="0dp" app:layout_constraintVertical_bias="0.115"/>

</android.support.constraint.ConstraintLayout>